force-app/main/default/objects/vlocity_ins__OutboundConfiguration__c/fields/vlocity_ins__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endpoint</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>