force-app/main/default/objects/vlocity_ins__OutboundConfiguration__c/fields/vlocity_ins__InitialAction__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InitialAction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>