force-app/main/default/objects/vlocity_ins__OutboundConfiguration__c/fields/vlocity_ins__PathstoDelete__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PathstoDelete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paths to Delete</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>