force-app/main/default/objects/vlocity_ins__OutboundConfiguration__c/fields/vlocity_ins__Template__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>